# ws2812-flexio

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: dual_320.rs  dual_332.rs  dual_332_dma.rs  rainbow.rs  run.py  triple_332.rs  triple_332_dma.rs  triple_332_dma2.rs  triple_332_dma_blocking.rs  triple_332_dma_rtic.rs
examples/common/: effects.rs  mod.rs  uart_log.rs  uart_panic.rs
examples/common/uart/: uart_log.rs  uart_writer.rs
src/: errors.rs  flexio_configurator.rs  lib.rs  pins.rs  pixel.rs  pixelstream.rs  prepared_pixels.rs
src/blocking/: driver.rs  mod.rs
src/flexio/: dma.rs  driver.rs  driver_builder.rs  driver_dma.rs  errors.rs  flexio_configurator.rs  idle_timer_finished_watcher.rs  interleaved_pixels.rs  interrupt_handler.rs  maybe_own.rs  mod.rs  pins.rs  prepared_pixels.rs  preprocessed_pixels.rs
src/flexspi/: mod.rs
