[package]
name = "ws2812-flexio"
version = "0.2.0"
edition = "2021"
authors = ["Finomnis <finomnis@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/ws2812-flexio"
description = "A neopixel driver based on NXP i.MX RT's FlexIO bus."
keywords = ["ws2812", "neopixel", "flexio", "imxrt", "nxp"]
categories = ["embedded", "no-std"]

exclude = ["/.gitignore", "/.github/", "/.vscode/"]

[features]
default = []

# Do not use; internally required for Github CI
github_ci = ["teensy4-bsp"]


[dependencies]
imxrt-hal = "0.5.3"
imxrt-ral = "0.5.1"
cortex-m = "0.7.7"
log = "0.4.19"
paste = "1.0.12"
snafu = { version = "0.7.4", default-features = false }

# Pixel types
palette = { version = "0.7.2", default-features = false, features = ["libm"] }

# Async reactor, for executing DMA actions
cassette = "0.2.3"

# Additional CI dependencies
teensy4-bsp = { version = "0.4", optional = true }
futures = { version = "0.3.29", default-features = false, features = [
    "async-await",
] }

[dev-dependencies]
embedded-hal = "0.2.7"
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }

# Board support package
teensy4-bsp = { version = "0.4.3", features = ["rt"] }

# Packages necessary for board usage
nb = "1.1.0"    # Async
fugit = "0.3.6" # Time

# Allow docsrs options
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
