[package]
name = "ws2812-flexio"
version = "0.2.0"
edition = "2021"
rust-version = "1.68"
authors = ["Finomnis <finomnis@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/ws2812-flexio"
description = "A neopixel driver based on NXP i.MX RT's FlexIO bus."
keywords = ["ws2812", "neopixel", "flexio", "imxrt", "nxp"]
categories = ["embedded", "no-std"]

exclude = ["/.gitignore", "/.github/", "/.vscode/"]

[features]
default = []

# Do not use; internally required for Github CI
_ci = ["imxrt-ral/imxrt1062"]

[dependencies]
# Hardware
imxrt-dma = "0.1.1"
imxrt-iomuxc = "0.2.7"
imxrt-ral = "0.5.3"

# Common
log = "0.4.21"
critical-section = "1.1.2"
paste = "1.0.15"
snafu = { version = "0.8.3", default-features = false }

# Pixel types
palette = { version = "0.7.6", default-features = false, features = ["libm"] }

# Async reactor, for executing DMA actions
cassette = "0.3.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }

# Fix for min-versions.
# TODO: remove once unnecessary.
bare-metal = ">= 0.2.4"
ral-registers = ">= 0.1.3"

[dev-dependencies]
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }

# Board support package
teensy4-bsp = { version = "0.5.0", features = ["rt"] }
#imxrt-hal = "0.5.5"

# Allow docsrs options
[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
